@@ -16,6 +16,8 @@ Applications
 --------------------------
  * Record application now has an option 'o' which allows 0 to act as an exit
    key setting the RECORD_STATUS variable to 'OPERATOR' instead of 'DTMF'
+ * Monitor() - A new option, B(), has been added that will turn on a periodic
+   beep while the call is being recorded.
 
 Functions
 --------------------------
@@ -85,6 +87,8 @@ MixMonitor
 -------------------------
  * A new function, MIXMONITOR, has been added to allow access to individual
    instances of MixMonitor on a channel.
+ * A new option, B(), has been added that will turn on a periodic beep while the
+   call is being recorded.
 
 
 Channel Drivers
